--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.13.1",
+    "helmet": "^2.1.0",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "helmet": "~2.1.0"
   }
 }
